tools/grammar/parser.ts
// A predictive parser for the grammar of Spec chapter 2. Not normative (ADR
// 0028): it exists to check that the grammar in spec/data/grammar.ebnf stays
// predictive, with two tokens of lookahead and no backtracking, the way the
// #38 prototype did. It reads its word lists from spec/data/grammar.toml.
//
//   * No backtracking. There is no mark/reset, so a consumed token stays consumed.
//   * Two tokens of lookahead at most: `peek(0)` and `peek(1)`, and `peek(2)`
//     throws. Every decision that reads `peek(1)` goes through `la2(name)`,
//     and each name must be a `[[decision]]` in grammar.toml.
//   * The parser drives the lexer: every peek names the mode. A buffered token
//     that lexes differently in the mode asked for is recorded as a relex.
//   * The first syntax error stops the parse. Only it is normative.

import grammar from '../../spec/data/grammar.toml';
import { Lexer, RESERVED, type Mode, type Token } from './lexer';

export type Node = {
  [key: string]: any;
  col?: number;
  k: string;
  line?: number;
};

export class SyntaxError extends Error {
  constructor(
    public tok: Token,
    public code: string,
    msg: string,
  ) {
    super(msg);
  }
}

const words = (list: string[]) => new Set(list.filter(w => !w.includes(' ')));
const SINGULAR = words(grammar.chunk.map((c: any) => c.singular));
const PLURAL = words(grammar.chunk.map((c: any) => c.plural));
const ORDINALS = new Set<string>(grammar.ordinals);
const PROPERTIES = new Set<string>(grammar.properties);
const FOLLOW = new Set<string>(grammar.follow);
const DECISIONS = new Set<string>(grammar.decision.map((d: any) => d.name));
const PAT_KEYWORDS = new Set<string>(grammar.text_patterns.keywords);
const PAT_CLASSES = new Map<string, Set<string>>();
for (const c of grammar.text_patterns.classes as string[]) {
  const [a, b] = c.split(' ');
  PAT_CLASSES.set(a!, (PAT_CLASSES.get(a!) ?? new Set()).add(b!));
}
const ANCHORS = new Map<string, Set<string>>();
for (const c of grammar.text_patterns.anchors as string[]) {
  const [a, b] = c.split(' ');
  ANCHORS.set(a!, (ANCHORS.get(a!) ?? new Set()).add(b!));
}
const INT_TYPES = new Set<string>(grammar.binary_patterns.integer_types);
const SIZE_UNITS = new Set<string>(grammar.binary_patterns.size_units);
const BYTE_ORDERS = new Set<string>(grammar.binary_patterns.byte_orders);
const HEAD_SUFFIXES = new Set(['queued', 'dropping', 'replacing', 'deciding']);
const COMPARISONS = new Set(['=', '<>', '<', '>', '<=', '>=']);
// The Argument Label words (ADR 0055): any Name but the excluded ones, and the
// listed Reserved Words.
const LABEL_RESERVED = new Set<string>(grammar.labels.reserved);
const LABEL_EXCLUDED = new Set<string>(grammar.labels.excluded);
// Statement blocks' ending keywords, which never follow a Lambda's `end`.
const BLOCK_KEYWORDS = ['if', 'repeat', 'match', 'try', 'wait'];
const endSuffixExpected = (name: string, at: Token) =>
  `end of line or \`${name}\` after \`end\` (closing line ${at.line})`;
// The operand-starting Reserved Words.
const OPERAND_WORDS = new Set([
  'the',
  'not',
  'true',
  'false',
  'nothing',
  'it',
  'me',
  'given',
  'replace',
]);
// Words that end a line in operator position and so continue it.
const CONTINUING_WORDS = new Set([
  'and',
  'or',
  'is',
  'mod',
  'div',
  'contains',
  'matches',
  'with',
  'be',
]);

export type Stats = {
  relexes: {
    col: number;
    line: number;
    now: string;
    site: string;
    was: string;
  }[];
  sites: Map<string, number>;
};

export const newStats = (): Stats => ({ sites: new Map(), relexes: [] });

type Buffered = {
  start: number;
  tok: Token;
};

export class Parser {
  lx: Lexer;
  buf: Buffered[] = [];
  offset = 0; // the source offset after the last consumed token
  prev: Token | null = null;
  brackets: string[] = []; // the open brackets, innermost last
  build = 0; // inside a `<< … >>` build value, where `as uint16` is a field type
  size = 0; // inside a parenthesised Binary Pattern size, where `^n` is allowed
  // A newline is skipped only while more brackets are open than the top of
  // this stack. A Lambda head and a block Lambda body push their own depth.
  nlBase: number[] = [0];
  site = '';

  constructor(
    src: string,
    public stats: Stats = newStats(),
  ) {
    this.lx = new Lexer(src);
  }

  // ---------------------------------------------------------------- tokens

  private opens(t: Token): string | null {
    if (t.t === 'patopen') {
      return '<';
    }
    if (t.t === 'binopen') {
      return '<<';
    }
    if (t.t === 'op' && (t.v === '(' || t.v === '[' || t.v === '{')) {
      return t.v;
    }
    return null;
  }

  private closes(t: Token, top: string | undefined): boolean {
    if (t.t === 'patclose') {
      return top === '<';
    }
    if (t.t !== 'op') {
      return false;
    }
    return (
      (t.v === ')' && top === '(') ||
      (t.v === ']' && top === '[') ||
      (t.v === '}' && top === '{') ||
      (t.v === '>>' && top === '<<')
    );
  }

  // A line goes on after a comma, or after a binary operator (chapter 1).
  private continues(t: Token | null): boolean {
    if (!t || t.mode !== 'operator') {
      return t?.t === 'op' && t.v === ',';
    }
    if (t.t === 'op') {
      return !["'s", ')', ']', '}', '>>', ':'].includes(t.v);
    }
    return t.t === 'word' && CONTINUING_WORDS.has(t.v);
  }

  private lexAt(
    start: number,
    mode: Mode,
    before: Token | null,
    depth: number,
  ): Buffered {
    for (;;) {
      const tok = this.lx.lex(start, mode);
      if (
        tok.t === 'nl' &&
        (depth > this.nlBase.at(-1)! || this.continues(before))
      ) {
        start = tok.end;
        continue;
      }
      return { tok, start };
    }
  }

  peek(k: 0 | 1 | 2, mode: Mode = 'operand'): Token {
    if (k > 1) {
      throw new Error(`a third token of lookahead at ${this.site}`);
    }
    while (this.buf.length <= k) {
      this.fill(this.buf.length, mode);
    }
    const b = this.buf[k]!;
    if (b.tok.mode !== mode && b.tok.t !== 'nl' && b.tok.t !== 'eof') {
      const again = this.lexAt(
        b.start,
        mode,
        k === 0 ? this.prev : this.buf[0]!.tok,
        this.depthAt(k),
      );
      const same =
        again.tok.t === b.tok.t &&
        again.tok.v === b.tok.v &&
        again.tok.end === b.tok.end;
      if (!same) {
        this.stats.relexes.push({
          site: this.site,
          line: b.tok.line,
          col: b.tok.col,
          was: `${b.tok.t}:${b.tok.v}`,
          now: `${again.tok.t}:${again.tok.v}`,
        });
        this.buf.length = k;
        this.buf.push(again);
      } else {
        b.tok.mode = mode;
      }
    }
    return this.buf[k]!.tok;
  }

  private depthAt(i: number): number {
    let d = this.brackets.length;
    if (i === 1) {
      const t0 = this.buf[0]!.tok;
      if (this.opens(t0)) {
        d++;
      } else if (this.closes(t0, this.brackets.at(-1))) {
        d--;
      }
    }
    return d;
  }

  private fill(i: number, mode: Mode) {
    const start = i === 0 ? this.offset : this.buf[0]!.tok.end;
    const before = i === 0 ? this.prev : this.buf[0]!.tok;
    this.buf.push(this.lexAt(start, mode, before, this.depthAt(i)));
  }

  next(mode: Mode = 'operand'): Token {
    const t = this.peek(0, mode);
    if (t.t === 'error') {
      throw new SyntaxError(t, t.code!, t.v);
    }
    this.buf.shift();
    this.offset = t.end;
    this.prev = t;
    const o = this.opens(t);
    if (o) {
      this.brackets.push(o);
    } else if (this.closes(t, this.brackets.at(-1))) {
      this.brackets.pop();
    }
    return t;
  }

  // A decision that reads the second token, counted under its name.
  la2(site: string, mode: Mode = 'operand'): Token {
    if (!DECISIONS.has(site)) {
      throw new Error(`decision \`${site}\` isn't in grammar.toml`);
    }
    this.site = site;
    this.stats.sites.set(site, (this.stats.sites.get(site) ?? 0) + 1);
    return this.peek(1, mode);
  }

  fail(t: Token, expected: string): never {
    if (t.t === 'error') {
      throw new SyntaxError(t, t.code!, t.v);
    }
    const got =
      t.t === 'nl'
        ? 'end of line'
        : t.t === 'eof'
          ? 'end of source'
          : `\`${t.v}\``;
    throw new SyntaxError(
      t,
      'unexpected token',
      `expected ${expected}, found ${got}`,
    );
  }

  // Stamps a node with the position of the token its construct starts at,
  // or its operator's, for the source map (chapter 8).
  at<N extends Node>(t: Token, n: N): N {
    if (n.line === undefined) {
      n.line = t.line;
      n.col = t.col;
    }
    return n;
  }

  isWord(t: Token, ...ws: string[]) {
    return t.t === 'word' && (ws.length === 0 || ws.includes(t.v));
  }
  isName(t: Token) {
    return t.t === 'word' && !RESERVED.has(t.v) && t.v !== '_';
  }
  // A word that may be an Argument Label. It is decided on one token, in
  // operator position, after a complete parameter or argument.
  isLabel(t: Token) {
    return (
      t.t === 'word' &&
      (this.isName(t) || LABEL_RESERVED.has(t.v)) &&
      !LABEL_EXCLUDED.has(t.v)
    );
  }
  // `label arg label arg …` after a leading argument, for a Command Call, a
  // Handler head or an event.
  labelled(item: () => Node, labels: string[], items: Node[]) {
    while (this.isLabel(this.peek(0, 'operator'))) {
      labels.push(this.next('operand').v);
      items.push(item());
    }
  }
  isOp(t: Token, ...vs: string[]) {
    return t.t === 'op' && vs.includes(t.v);
  }
  atWord(...ws: string[]) {
    return this.isWord(this.peek(0), ...ws);
  }
  atOperatorWord(...ws: string[]) {
    return this.isWord(this.peek(0, 'operator'), ...ws);
  }
  atEnd(mode: Mode = 'operator') {
    const t = this.peek(0, mode);
    return t.t === 'nl' || t.t === 'eof';
  }
  expectWord(w: string, mode: Mode = 'operand'): Token {
    const t = this.peek(0, mode);
    if (!this.isWord(t, w)) {
      this.fail(t, `\`${w}\``);
    }
    return this.next(mode);
  }
  expectOp(v: string, mode: Mode = 'operator'): Token {
    const t = this.peek(0, mode);
    if (!this.isOp(t, v)) {
      this.fail(t, `\`${v}\``);
    }
    return this.next(mode);
  }
  name(what = 'a name', mode: Mode = 'operand'): string {
    const t = this.peek(0, mode);
    if (!this.isName(t)) {
      this.fail(t, what);
    }
    return this.next(mode).v;
  }
  // A Handler, message or event name: any name but `all` (a Join).
  messageName(what: string): string {
    const t = this.peek(0);
    if (this.isWord(t, 'all')) {
      this.fail(t, `${what} (\`all\` can't name a message)`);
    }
    return this.name(what);
  }
  // The Selector `move:to:` for `move` with the label `to`. A message with no
  // labels keeps its plain name.
  selector(name: string, labels: string[]): string {
    return labels.length ? `${[name, ...labels].join(':')}:` : name;
  }
  endOfStatement() {
    const t = this.peek(0, 'operator');
    if (t.t === 'eof') {
      return;
    }
    if (t.t !== 'nl') {
      this.fail(t, 'end of line');
    }
    this.next('operator');
  }
  skipNL() {
    while (this.peek(0).t === 'nl') {
      this.next();
    }
  }
  // A bare `end`, or `end` and the Name or keyword of the block opened at
  // `at`.
  endSuffix(name: string, at: Token) {
    const t = this.peek(0);
    if (t.t === 'nl' || t.t === 'eof') {
      return;
    }
    if (!this.isWord(t, name)) {
      this.fail(t, endSuffixExpected(name, at));
    }
    this.next();
  }

  // Can this token, in operand position, start an expression?
  startsExpr(t: Token): boolean {
    if (['num', 'str', 'template', 'patopen', 'binopen'].includes(t.t)) {
      return true;
    }
    if (t.t === 'op') {
      return ['(', '[', '{', '-'].includes(t.v);
    }
    return t.t === 'word' && (this.isName(t) || OPERAND_WORDS.has(t.v));
  }

  // ---------------------------------------------------------------- top level

  source(): Node[] {
    const out: Node[] = [];
    this.skipNL();
    while (this.peek(0).t !== 'eof') {
      out.push(this.declaration());
      this.skipNL();
    }
    return out;
  }

  declaration(): Node {
    const t = this.peek(0);
    if (this.isWord(t, 'private')) {
      this.next();
      const u = this.peek(0);
      if (!this.isWord(u, 'on', 'function', 'constant')) {
        this.fail(u, '`on`, `function` or `constant` after `private`');
      }
      return { ...this.declaration(), private: true };
    }
    if (this.isWord(t, 'on')) {
      return this.handler();
    }
    if (this.isWord(t, 'function')) {
      return this.func();
    }
    if (this.isWord(t, 'use')) {
      return this.use();
    }
    if (this.isWord(t, 'constant')) {
      this.next();
      const name = this.name('a Constant name');
      this.expectOp('=');
      const value = this.expr();
      this.endOfStatement();
      return { k: 'Constant', name, value };
    }
    if (
      this.isWord(t, 'script') &&
      this.isWord(this.la2('script-variable'), 'variable')
    ) {
      this.next();
      this.next();
      const name = this.name('a Script Variable name');
      let init: Node | null = null;
      if (this.isOp(this.peek(0, 'operator'), '=')) {
        this.next('operator');
        init = this.expr();
      }
      this.endOfStatement();
      return { k: 'ScriptVariable', name, init };
    }
    this.fail(
      t,
      '`on`, `function`, `script variable`, `constant`, `use` or `private`',
    );
  }

  use(): Node {
    this.next();
    const names = [this.name('an imported name')];
    while (this.isOp(this.peek(0, 'operator'), ',')) {
      this.next('operator');
      names.push(this.name('an imported name'));
    }
    this.expectWord('from', 'operator');
    const library = this.name('a Library name');
    let rename: string | null = null;
    // `as` renames, so it follows a single imported name only.
    if (names.length === 1 && this.atOperatorWord('as')) {
      this.next('operator');
      rename = this.name('a name after `as`');
    }
    this.endOfStatement();
    return { k: 'Use', names, library, rename };
  }

  handler(): Node {
    const on = this.next();
    const name = this.messageName('a Handler name');
    const params: Node[] = [];
    let guard: Node | null = null;
    const suffixes: string[] = [];
    let during: string | null = null;
    const t = this.peek(0);
    const labels: string[] = [];
    if (!(
      t.t === 'nl' ||
      t.t === 'eof' ||
      this.isWord(t, 'where') ||
      this.isOp(t, ',')
    )) {
      params.push(this.pattern());
      this.labelled(() => this.pattern(), labels, params);
    }
    // Parameters, then a Guard, then suffixes. After a comma, a suffix word
    // is always a suffix, so it can't be a parameter name there.
    let inParams = params.length > 0;
    let canGuard = true;
    for (;;) {
      const c = this.peek(0, 'operator');
      if (inParams && this.isLabel(c)) {
        this.fail(c, 'an Argument Label after one leading parameter only');
      }
      if (canGuard && this.isWord(c, 'where')) {
        this.next('operator');
        guard = this.expr();
        inParams = canGuard = false;
        continue;
      }
      if (!this.isOp(c, ',')) {
        break;
      }
      this.next('operator');
      const w = this.peek(0);
      if (this.isWord(w) && HEAD_SUFFIXES.has(w.v)) {
        suffixes.push(this.next().v);
        inParams = canGuard = false;
      } else if (this.isWord(w, 'during') && this.isName(this.la2('during'))) {
        this.next();
        during = this.next().v;
        inParams = canGuard = false;
      } else if (inParams && labels.length) {
        this.fail(w, 'a suffix (no commas between labelled parameters)');
      } else if (inParams) {
        params.push(this.pattern());
      } else {
        this.fail(
          w,
          '`queued`, `dropping`, `replacing`, `deciding` or `during`',
        );
      }
    }
    this.endOfStatement();
    const body = this.block(['end', 'finally']);
    let fin: Node[] | null = null;
    if (this.atWord('finally')) {
      this.next();
      this.endOfStatement();
      fin = this.block(['end']);
    }
    const end = this.expectWord('end');
    this.endSuffix(name, on);
    this.endOfStatement();
    return {
      k: 'Handler',
      name: this.selector(name, labels),
      params,
      guard,
      suffixes,
      during,
      body,
      finally: fin,
      line: on.line,
      col: on.col,
      end: { line: end.line, col: end.col },
    };
  }

  func(): Node {
    const fn = this.next();
    const name = this.name('a function name');
    const params: { default: Node | null; name: string }[] = [];
    // A parameter is a name, then `=` and a default (ADR 0035).
    const param = () => {
      const name = this.name('a parameter name');
      let dflt: Node | null = null;
      if (this.isOp(this.peek(0, 'operator'), '=')) {
        this.next('operator');
        dflt = this.expr();
      }
      params.push({ name, default: dflt });
    };
    if (!this.atEnd('operand')) {
      param();
      while (this.isOp(this.peek(0, 'operator'), ',')) {
        this.next('operator');
        param();
      }
    }
    this.endOfStatement();
    const body = this.block(['end']);
    const end = this.expectWord('end');
    this.endSuffix(name, fn);
    this.endOfStatement();
    return {
      k: 'Function',
      name,
      params,
      body,
      line: fn.line,
      col: fn.col,
      end: { line: end.line, col: end.col },
    };
  }

  // ---------------------------------------------------------------- statements

  block(terms: string[]): Node[] {
    const out: Node[] = [];
    for (;;) {
      this.skipNL();
      const t = this.peek(0);
      if (t.t === 'eof') {
        this.fail(t, terms.map(w => `\`${w}\``).join(' or '));
      }
      if (this.isWord(t) && terms.includes(t.v)) {
        return out;
      }
      out.push(this.statement());
      this.endOfStatement();
    }
  }

  // A branch body: a newline and a block, or one simple statement on the line.
  body(terms: string[]): Node[] {
    if (this.atEnd()) {
      this.endOfStatement();
      return this.block(terms);
    }
    const s = [this.simpleStatement()];
    this.endOfStatement();
    return s;
  }

  statement(): Node {
    const t = this.peek(0);
    if (this.isWord(t, 'if')) {
      return this.at(t, this.ifStatement());
    }
    if (this.isWord(t, 'repeat')) {
      return this.at(t, this.repeat());
    }
    if (this.isWord(t, 'match')) {
      return this.at(t, this.match());
    }
    if (this.isWord(t, 'try')) {
      return this.at(t, this.tryStatement());
    }
    if (this.isWord(t, 'wait')) {
      return this.at(t, this.wait(true));
    }
    return this.simpleStatement();
  }

  // A statement that fits on one line: any but `if`, `repeat`, `match`, `try`
  // and the block forms of `wait for`.
  simpleStatement(): Node {
    const t = this.peek(0);
    return this.at(t, this.simpleStatementAt(t));
  }
